added ability to short URLs in message by using bit.ly API

--- a/config.php.sample
+++ b/config.php.sample
@@ -13,3 +13,7 @@ define('CONSUMER_KEY', '');
 define('CONSUMER_SECRET', '');
 define('ACCESS_TOKEN', '');
 define('ACCESS_TOKEN_SECRET', '');
+
+// Bit.ly
+define('BIT_LY_ID', '');
+define('BIT_LY_API_KEY', '');
